# skald

./: Cargo.toml  opencode.json  requirements.txt  run.sh
agents/: README.md
agents/blueprint/: AGENT.md  meta.json
agents/code-explorer/: AGENT.md
agents/common/: mcp.md  tools.md
agents/generalist/: AGENT.md
agents/main/: AGENT.md  meta.json
agents/project-coordinator/: AGENT.md
agents/researcher/: AGENT.md
agents/software-architect/: AGENT.md  meta.json
agents/software-engineer/: AGENT.md
agents/spec-writer/: AGENT.md  meta.json
agents/tech-lead/: AGENT.md
agents/tic/: AGENT.md  meta.json
crates/core-api/src/: approval.rs  chat_hub.rs  chatbot.rs  events.rs  lib.rs  message_meta.rs  plugin.rs  tts.rs
crates/honcho-client/src/: error.rs
crates/llm-client/src/: anthropic.rs  ollama.rs  openai.rs
crates/mcp-client/src/: lib.rs
crates/plugin-comfyui/: Cargo.toml
crates/plugin-comfyui/src/: lib.rs
crates/plugin-mobile-connector/: Cargo.toml
crates/plugin-mobile-connector/src/: lib.rs  notifier.rs  proxy.rs  router.rs
crates/plugin-telegram-bot/src/: attachments.rs  auth.rs  events.rs  handlers.rs  helpers.rs  lib.rs  tools.rs
crates/plugin-tts-kokoro/: Cargo.toml
crates/plugin-tts-kokoro/src/: kokoro_server.py  lib.rs
crates/plugin-tts-orpheus-3b/src/: orpheus_server.py
crates/skald-relay-client/src/: client.rs  lib.rs  pipe.rs  state.rs
crates/skald-relay-client/tests/: integration.rs
crates/skald-relay-common/: Cargo.toml
crates/skald-relay-common/src/: crypto.rs  lib.rs  pipe.rs
crates/skald-relay-server/: Cargo.toml
crates/skald-relay-server/src/: auth.rs  config.rs  lib.rs  limits.rs  main.rs  pipe.rs  push.rs  routing.rs  store.rs  types.rs  ws.rs
crates/skald-relay-server/tests/: pipe.rs  protocol.rs
docs/: agents.md  approval.md  architecture.md  chat-hub.md  cron.md  database.md  frontend.md  index.md  llm-clients.md  mcp.md  plugins.md  projects.md  secrets.md  session.md  telegram.md  tools.md  transcribe-providers.md  tts-providers.md  workspace-crates.md
docs/approval/: index.md
docs/crates/: workspace.md
docs/mcp/: index.md
docs/mcp/servers/: gcal.md  gmail.md  gmaps.md  serpapi_flights.md  whatsapp.md
docs/plugins/: honcho.md  mobile-connector.md  telegram.md
docs/providers/: tts.md
docs/relay/: crypto.md  describe-and-push.md  framing.md  index.md  payloads.md  pipe.md  relay-protocol.md  server.md  test-vectors.md
docs/session/: run-context.md
scripts/: gcal_mcp_server.py  gmail_mcp_server.py  gmaps_mcp_server.py
scripts/mcp/serpapi_flights/: server.py
scripts/whatsapp_mcp/: index.js  package-lock.json  package.json
skills/comfyui-img2img/: run.py
src/: config.rs  main.rs
src/api/: dev.rs  llm.rs  mod.rs  stats.rs  transcribe_audio.rs  tts_models.rs
src/chat_hub/: mod.rs
src/chatbot/: logging.rs
src/core/: skald.rs  tool_catalog.rs
src/core/approval/: mod.rs
src/core/chat_hub/: inbox.rs  mod.rs
src/core/cron/: mod.rs
src/core/db/: chat_history.rs  job_runs.rs  mcp_servers.rs  mod.rs  scheduled_jobs.rs  session_mcp_grants.rs
src/core/image_generate/: openrouter_image.rs
src/core/llm/: manager.rs
src/core/llm/providers/: openai.rs  openrouter.rs
src/core/mcp/: mod.rs
src/core/plugin/: mod.rs
src/core/run_context/: mod.rs
src/core/session/handler/: agent_dispatch.rs  config.rs  llm_loop.rs  message_builder.rs  mod.rs  resume.rs
src/core/tic/: mod.rs
src/core/tools/: ast_outline.rs  configure_plugin.rs  cron_jobs.rs  image_generate.rs  list_items.rs  list_mcp.rs  list_secrets.rs  mod.rs  read_notification.rs  register_mcp.rs  restart.rs  set_secret.rs  show_mcp_tools.rs  toggle_item.rs
src/core/tools/fs/: grep_files.rs  list_files.rs  mod.rs
src/core/transcribe/: openai_audio.rs
src/core/tts/: db.rs  manager.rs  mod.rs  openai_tts.rs
src/db/: llm_requests.rs  mod.rs
src/frontend/: server.rs
src/frontend/api/: approval.rs  cron.rs  dev.rs  files.rs  mod.rs  run_context.rs  sessions.rs  tts_models.rs  uploads.rs  ws.rs
src/llm/: db.rs  manager.rs
src/llm/providers/: elevenlabs.rs  mod.rs  openrouter.rs
src/mcp/: mod.rs
src/plugin/: mod.rs
src/session/handler/: llm_loop.rs
src/transcribe/: elevenlabs_audio.rs  manager.rs  mod.rs
src/tts/: elevenlabs_tts.rs  manager.rs  mod.rs
web/: app.js  index.html
web/components/: approval-groups.js  approval-rules.js  config-page.js  copilot-render.js  copilot.js  cron-jobs.js  file-viewer-page.js  home-page.js  llm-providers.js  llm-request-detail.js  llm-requests.js  mobile-app.js  models-hub.js  models-tts.js  sidebar.js
web/components/projects/: project-board.js
web/components/shared/: chat-page.js  file-viewer-base.js  file-viewer-mobile.js  projects-page.js
web/components/tasks/: cron.js  history.js  index.js  running.js  scheduled.js  utils.js
web/css/: approval-groups.css  approval-rules.css  config.css  copilot-input.css  copilot-messages.css  cron-jobs.css  dialogs.css  file-viewer.css  home.css  llm-requests.css  mobile.css  page-shell.css  sidebar.css  variables.css
web/css/projects/: board.css
web/css/tasks/: base.css  history.css
web/lib/: base.js  chat-session.js
