[package]
name = "plugin-tts-kokoro"
version = "0.1.0"
edition = "2024"

[dependencies]
core-api    = { path = "../core-api" }
anyhow      = "1"
async-trait = "0.1"
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
reqwest     = { version = "0.13", features = ["json"] }
